add a config page, initially used for updating personnel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - GOOGLE_CREDENTIALS_PATH=${GOOGLE_CREDENTIALS_PATH}
       - COMMIT_HASH=${GIT_COMMIT}
       - VERSION_TAG=${GIT_VERSION}
+      - SECRET_KEY=${FLASK_SECRET_KEY}
     volumes:
       - ${LOCAL_GOOGLE_CREDENTIALS_PATH}:${GOOGLE_CREDENTIALS_PATH}
       - ${LOCAL_DATA_PATH}:/app/data
